fix pricing plan anchor

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Demos</h1>
     <ul>
-        <li><a href="pricingplan/index.html"></a>Pricing Plan</li>
+        <li><a href="pricingplan/index.html">Pricing Plan</a></li>
     </ul>
 </body>
 </html>
