--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Demos</h1>
     <ul>
         <li><a href="pricingplan/index.html">Pricing Plan</a></li>
+        <li><a href="museum/index.html">Museum of Candy</a></li>
     </ul>
 </body>
 </html>
