--- a/index.html
+++ b/index.html
@@ -24,12 +24,28 @@
     </nav>
         <div class="container">
         <main>
-            <h1 class="display-1">Hi, I'm Jonathan!</h1>
-            <h2>These are the projects I have currently worked on:</h2>
-            <ul>
-                <li><a href="pricingplan/index.html">Pricing Plan</a></li>
-                <li><a href="museum/index.html">Museum of Candy</a></li>
-            </ul>
+            <h1 class="display-1 my-5">Hi, I'm Jonathan!</h1>
+            <h2>These are the projects I have worked on:</h2>
+            <div class="row mt-3">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Pricing Plan</h5>
+                            <p class="card-text">Written in HTML and CSS.</p>
+                            <a href="pricingplan/index.html" class="btn btn-primary">Go</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Museum of Candy</h5>
+                            <p class="card-text">Written using HTML, CSS and Bootstrap.</p>
+                            <a href="museum/index.html" class="btn btn-primary">Go</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
