--- a/scorekeeper/scorekeeper.html
+++ b/scorekeeper/scorekeeper.html
@@ -4,34 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Score Keeper</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <img src="https://images.unsplash.com/photo-1584813539806-2538b8d918c6">
-            <span id="title">Ping Pong Score Keeper</span>
+    <div class="container border shadow rounded">
+        <header class="row border-bottom border-3">
+            <img class="d-block p-0" src="https://unsplash.com/photos/i0kB5B9J8Ds/download?ixid=MnwxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNjYzMjE5NTAz&force=true&w=1920" alt="Ping Pong Image">
+            <div id="title" class="p-2 fw-bold">Ping Pong Score Keeper</div>
         </header>
-        <h1>0 to 0</h1>
-        <span>Use the buttons below to keep score!</span>
+        <main class="p-2">
+            <h1>0 to 0</h1>
+            <span>Use the buttons below to keep score!</span>
 
-        <div class="select">
-            <label for="maxScoreSelect">Playing To:</label>
-            <select name="maxScore" id="maxScoreSelect">
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-            </select>
-        </div>
-        <div class="buttons">
-            <button class="player1">+1 Player One</button>
-            <button class="player2">+1 Player Two</button>
-            <button class="reset">Reset</button>
+            <div class="select my-2 fw-bold">
+                <label for="maxScoreSelect">Playing To:</label>
+                <select name="maxScore" id="maxScoreSelect" class="form-select w-25 d-inline-block">
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                </select>
+            </div>
+        </main>
+        <div class="buttons row">
+            <button class="player1 col-sm-4 btn bg-success py-2 rounded-1 text-light">+1 Player One</button>
+            <button class="player2 col-sm-4 btn bg-primary py-2 rounded-1 text-light">+1 Player Two</button>
+            <button class="reset col-sm-4 btn bg-danger py-2 rounded-1 text-light">Reset</button>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src="app.js"></script>
 </body>
 </html>
