scorekeeper: change scores to separate spans for coloured win/loss

--- a/scorekeeper/scorekeeper.html
+++ b/scorekeeper/scorekeeper.html
@@ -13,7 +13,7 @@
             <div id="title" class="p-2 fw-bold">Ping Pong Score Keeper</div>
         </header>
         <main class="p-2">
-            <h1>0 to 0</h1>
+            <h1><span class="p1Score">0</span> to <span class="p2Score">0</span></h1>
             <span>Use the buttons below to keep score!</span>
 
             <div class="select my-2 fw-bold">
