--- a/index.html
+++ b/index.html
@@ -45,9 +45,18 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-6 mt-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Score Keeper</h5>
+                            <p class="card-text">Written in HTML, Bootstrap, Javascript.</p>
+                            <a href="scorekeeper/scorekeeper.html" class="btn btn-primary">Go</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
